Unreleased
* Fixed artifact that was sometimes visible on grass texture when rocks are enabled.

2.8
* Added support for live changes to mod settings.

2.7
* Terrain where player is standing on is initialized first when mod is disabled and then enabled again.
* Added mod message "toggle".

2.6
* Reorganized water plants layer.

2.5.1
* Fixed and tweaked some models.
* Improved default settings.

2.5
* Added sparse grass and stones to desert locations.
* Improvements to terrain stones: winter version, new mesh and better disposition.
* Removed layer of flowers (deprecated by recent better additions) for lower memory usage.

2.4
* Improved proportions and scale for grass details when 'Realistic' option is enabled.
* Changes to featured grass plants with 'Realistic' option.
* Improvements to grass density and disposition.
* Merged rocks and stones layers, changed texture.
* Fixed exception thrown when inside a desert region if water plants are disabled.

2.3.1
* Fixed exception thrown in editor mode.
* Fixed exception thrown during winter if water plants are disabled.

2.3
* Make flying insects with particle systems at random spots on terrain.
* New grass textures by VMblast.
* Improvements to grass density and disposition.

2.2
* Graphical improvements.
* Smooth transition from/to winter.
* Compatibility upgrade.

2.1

* Seasonal changes (grass color and size).
* Graphical improvements for plants and flowers.
* Additional groundcover (bushes and stones).

2.0
* Support for flowers
* Settings presets are more user-friendly
* Texture import is more user-friendly

1.11
* Optimization of DetailPrototypes terrain setting.
* Graphic enhancements of water plants.
* Added console commands: realgrass_toggle, realgrass_distance.

1.10
* Support Grass shader in addition to GrassBillboard shader
* The max distance for detail render can be customized for different performance requirements
* Plants and grass position remains unchanged between sessions for the same terrain