@@ -252,6 +252,13 @@
                     "$type": "DaggerfallWorkshop.Game.Utility.ModSupport.ModSettings.SliderIntKey"
                 },
                 {
+                    "Value": " ",
+                    "Name": "DetailDistanceOverride",
+                    "Description": "Allows to increase detail distance over recommended limits.",
+                    "$version": "v1",
+                    "$type": "DaggerfallWorkshop.Game.Utility.ModSupport.ModSettings.TextKey"
+                },
+                {
                     "Min": 0.0,
                     "Max": 1.0,
                     "Value": 1.0,
